--- a/result.html
+++ b/result.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/result.css">
     <title>Result Page</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
@@ -19,8 +18,9 @@
         </nav>
     </header>
     <main>
-        <canvas id="resultChart" width="400" height="400"></canvas>
+        <section id="result"></section>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="js/result.js"></script>
 </body>
 
